# packed

./: .gitignore  ChangeLog.md  LICENSE  README.md  build.sh  byte.cabal  cabal.project  default.nix  packed.cabal  release.nix  shell.nix  stack.yaml
bench/: Main.hs
common/: MinimalTrieParser.hs
common/Data/Trie/: Naive.hs
common/Parser/Http/: Request.hs
nix/: new-ghcHEAD.nix  nixpkgs.nix  overrides.nix
src/Byte/: Array.hs  Slice.hs
src/Byte/Array/: Mutable.hs  Window.hs
src/Data/: ByteMap.hs
src/Data/List/: Unlifted.hs
src/Packed/: Bytes.hs  Text.hs
src/Packed/Bytes/: Builder.hs  Mutable.hs  Parser.hs  Set.hs  Small.hs  Stream.hs  Table.hs  Trie.hs  Unboxed.hs  Window.hs
src/Packed/Bytes/Builder/: IO.hs  ST.hs
src/Packed/Bytes/Stream/: IO.hs  Parser.hs  ST.hs
src/Packed/Internal/: UnliftedArray.hs
src/Packed/Json/: Decoding.hs
src/Packed/Text/: Small.hs  Window.hs
src/Text/: Array.hs  Slice.hs
test/: ByteMap.hs  Json.hs  Main.hs  Parser.hs
