name: byte
version: 0.1.0.0
description: Please see the README on Github at <https://github.com/andrewthad/bytearray#readme>
homepage: https://github.com/andrewthad/bytearray#readme
bug-reports: https://github.com/andrewthad/bytearray/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10

extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/bytearray

library
  hs-source-dirs: src
  build-depends:
      base >=4.10 && <5
    , ghc-prim >= 0.5.1.1 && < 0.6
    , primitive >= 0.6 && < 0.7
  exposed-modules:
    Byte.Array
    Byte.Array.Mutable
    Byte.Array.Window
    Byte.Slice
    Text.Array
    -- Text.Slice
  default-language: Haskell2010

test-suite bytearray-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytearray
  default-language: Haskell2010
