name: packed
version: 0.2.0
description: Please see the README on Github at <https://github.com/andrewthad/bytearray#readme>
homepage: https://github.com/andrewthad/bytearray#readme
bug-reports: https://github.com/andrewthad/bytearray/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2017 Andrew Martin
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10

extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/bytearray

library
  hs-source-dirs: src
  build-depends:
      base >= 4.9 && < 5.0
    , ghc-prim >= 0.5.0 && < 0.6
    , primitive >= 0.6.1 && < 0.7
  exposed-modules:
    Packed.Bytes
    Packed.Bytes.Window
    Packed.Bytes.Mutable
    Packed.Bytes.Small
    Packed.Bytes.Table
    Packed.Bytes.Parser
    Packed.Bytes.Stream.ST
    Packed.Bytes.Stream.IO
    Packed.Bytes.Set
    Packed.Bytes.Trie
    Packed.Text
    Packed.Text.Small
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  ghc-options: -rtsopts -threaded
  other-modules:
    Parser
    Parser.Http.Request
    Data.Trie.Naive
    MinimalTrieParser
  hs-source-dirs:
      test
    , common
  build-depends:
      base >=4.7 && <5
    , packed
    , hedgehog >= 0.5
    , tasty-hedgehog >= 0.1.0.2
    , tasty-hunit >= 0.9
    , tasty >= 1.0
    , containers >= 0.5.10
    , split
    , ghc-prim
    , primitive
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Parser.Http.Request
  hs-source-dirs:
      bench
    , common
  build-depends:
      base
    , packed
    , gauge
    , bytestring
    , hashable
    , containers
    , unordered-containers
    , primitive
    , split
  default-language: Haskell2010

